# abcom

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY_SIMPLE.md  INSTALL_FRIEND.md  Makefile  P2P_GROUP_SYNC.md  QUICK_DEPLOY.md  QUICK_START_TEST.sh  README.md  README.md.old  TEST_COMPLETE_SCENARIO.md  TEST_DISTRIBUTION.md  TEST_OPTIONS.md  build-and-distribute.sh  deploy.sh  install.sh  integration_test.sh  launch_debug.bat  regle-doc.md  regle-doc.md.old  regle.md  run_with_logs.bat  test_modal.bat  uninstall.sh
_archive_doc/2026-04-29/: MIGRATION_NOTES.md  README.old.md  ROADMAP.old.md
contrib/: abcom.desktop  abcom.service
docs/: 01-architecture-globale.md  01-architecture-globale.old.md  02-developer-experience.md  03-cicd-et-deploiement.md  04-securite-globale.md  05-glossaire.md  05-glossaire.old.md  DEPLOY_SIMPLE.md  INSTALL_FRIEND.old.md  INSTALL_WINDOWS.old.md  MIGRATIONNOTES.md  ROADMAP.md  _MIGRATION_NOTES.md  architecture-systeme.md  architecture-topology.drawio  deploiement-installation.md  maintenance-et-qualite.md  terminologie.md  utilisation-rapide.md
docs/abcom/: 01-architecture-et-structure.md  02-mecanismes-et-donnees.md  02-mecanismes-et-donnees.old.md  03-performances-et-optimisations.md  04-fiabilite-et-tests.md  04-fiabilite-et-tests.old.md  README.md  README.old.md
docs/adr/: ADR-001-langage-et-stack-rust.md  ADR-001-langage-et-stack-rust.old.md  (+2 more)
scripts/: abcom-install.sh  install-windows.ps1
specification/: gestion_historique_syncro.md
src/: app.rs  discovery.rs  emoji_registry.rs  main.rs  message.rs  network.rs  readme.md  ui.rs
(+45 files in other folders)
