[package]
name = "abcom"
version = "0.0.1"
edition = "2021"
description = "P2P LAN chat with automatic peer discovery and native GUI"
license = "MIT"
repository = "https://github.com/rxdy/abcom"

[[bin]]
name = "abcom"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = "0.31"
egui = "0.31"
chrono = "0.4"
anyhow = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
local-ip-address = "0.6"

[target.'cfg(windows)'.dependencies]
rodio = { version = "0.19", default-features = false, features = ["symphonia-wav"] }

[target.'cfg(not(windows))'.dependencies]
rodio = { version = "0.19", default-features = false }
